Added capability to enable / disable background discovery service as well as tune its frenquency
Signed-off-by: clinique <gael@lhopital.org>